# BehaveAI

./: BehaveAI.py  BehaveAI_annotation.py  BehaveAI_classify_track.py  BehaveAI_inspect_dataset.py  BehaveAI_live.py  BehaveAI_settings.ini  BehaveAI_settings_gui.py  Linux_Launcher.sh  README.md  Regenerate_annotations.py  Windows_Launcher_ps.ps1  Windows_Uninstaller_ps.ps1  index_annotations.py  motion_annotations.yaml  pyproject.toml  static_annotations.yaml
.github/workflows/: ci.yml  publish.yml
behaveai/: BehaveAI.py  BehaveAI_classify_track.py  Regenerate_annotations.py  annotation.py  classify_track.py  cli.py  inspect_dataset.py  launcher.py  live.py  motion.py
